; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty.c_termios64to32.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty.c_termios64to32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.user_termios = type { i64, i64, i32, i64, i64, i64, i64 }
%struct.termios32 = type { i8*, i8*, i32, i8*, i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.user_termios*, %struct.termios32*)* @termios64to32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @termios64to32(%struct.user_termios* %0, %struct.termios32* %1) #0 {
  %3 = alloca %struct.user_termios*, align 8
  %4 = alloca %struct.termios32*, align 8
  store %struct.user_termios* %0, %struct.user_termios** %3, align 8
  store %struct.termios32* %1, %struct.termios32** %4, align 8
  %5 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %6 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %5, i32 0, i32 6
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = load %struct.termios32*, %struct.termios32** %4, align 8
  %10 = getelementptr inbounds %struct.termios32, %struct.termios32* %9, i32 0, i32 6
  store i8* %8, i8** %10, align 8
  %11 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %12 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %11, i32 0, i32 5
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to i8*
  %15 = load %struct.termios32*, %struct.termios32** %4, align 8
  %16 = getelementptr inbounds %struct.termios32, %struct.termios32* %15, i32 0, i32 5
  store i8* %14, i8** %16, align 8
  %17 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %18 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %17, i32 0, i32 4
  %19 = load i64, i64* %18, align 8
  %20 = inttoptr i64 %19 to i8*
  %21 = load %struct.termios32*, %struct.termios32** %4, align 8
  %22 = getelementptr inbounds %struct.termios32, %struct.termios32* %21, i32 0, i32 4
  store i8* %20, i8** %22, align 8
  %23 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %24 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %23, i32 0, i32 3
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to i8*
  %27 = load %struct.termios32*, %struct.termios32** %4, align 8
  %28 = getelementptr inbounds %struct.termios32, %struct.termios32* %27, i32 0, i32 3
  store i8* %26, i8** %28, align 8
  %29 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %30 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.termios32*, %struct.termios32** %4, align 8
  %33 = getelementptr inbounds %struct.termios32, %struct.termios32* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @bcopy(i32 %31, i32 %34, i32 4)
  %36 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %37 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = inttoptr i64 %38 to i8*
  %40 = load %struct.termios32*, %struct.termios32** %4, align 8
  %41 = getelementptr inbounds %struct.termios32, %struct.termios32* %40, i32 0, i32 1
  store i8* %39, i8** %41, align 8
  %42 = load %struct.user_termios*, %struct.user_termios** %3, align 8
  %43 = getelementptr inbounds %struct.user_termios, %struct.user_termios* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = inttoptr i64 %44 to i8*
  %46 = load %struct.termios32*, %struct.termios32** %4, align 8
  %47 = getelementptr inbounds %struct.termios32, %struct.termios32* %46, i32 0, i32 0
  store i8* %45, i8** %47, align 8
  ret void
}

declare dso_local i32 @bcopy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
